update on the security enhancement